# pytest-result-sender

./:  .flake8  .pdm-python  conftest.py  pyproject.toml  pytest.ini
src/pytest_result_sender/: plugin.py
tests/: test_abc.py
