[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "maomao", email = "cvf.1206@163.com"},
]
dependencies = [
    "pytest>=7.3.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 .",
]}

test = "pytest"
[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
     \.git
   | \.hg
   | \.tox
   | venv
   | buck-out
   | build
   | dist
)/
'''

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
